src/test/resources/wacc_examples/valid/class/inheritance/classNestedInheritanceDeclaration.wacc
# a nested class is declared, but not called

# Output:
# #empty#

# Program:

begin
  class c {
    int x
  }
  class d extends c {
    int y
  }
  class e extends d {
    int z
  }
  skip
end
