src/test/resources/wacc_examples/invalid/syntaxErr/class/inheritance/invalidSuperClass.wacc
# subclass tries to extend "class"
# attempt

# Output:
# #empty#

# Program:

begin
  class d extends class {
    int x
  }
  skip
end
